--- a/base/customer-service.yaml
+++ b/base/customer-service.yaml
@@ -1,23 +1,23 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nautible-app-customer
-  namespace: nautible-app
+  name: nautible-app-ms-customer
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-customer
-    app.kubernetes.io/instance: nautible-app-customer
+    app.kubernetes.io/name: nautible-app-ms-customer
+    app.kubernetes.io/instance: nautible-app-ms-customer
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: app
     app.kubernetes.io/part-of: nautible
     app.kubernetes.io/managed-by: manual
 spec:
   selector:
-    app.kubernetes.io/instance: nautible-app-customer
+    app.kubernetes.io/instance: nautible-app-ms-customer
     app.kubernetes.io/component: app
   ports:
-  - name: http-nautible-app-customer-port
+  - name: http-nautible-app-ms-customer-port
     port: 8080
     targetPort: 8080
-  - name: grpc-nautible-app-customer-port
+  - name: grpc-nautible-app-ms-customer-port
     port: 9000
     targetPort: 9000
