--- a/overlays/aws/dev/customer-deploy.yaml
+++ b/overlays/aws/dev/customer-deploy.yaml
@@ -2,14 +2,14 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-customer
-  namespace: nautible-app
+  name: nautible-app-ms-customer
+  namespace: nautible-app-ms
 spec:
   template:
     spec:
       containers:
-      - name: nautible-app-customer
-        image: public.ecr.aws/nautible/nautible-app-customer:bdb22dedd38b1a357bf7fe74d373c614775aa92f
+      - name: nautible-app-ms-customer
+        image: public.ecr.aws/nautible/nautible-app-ms-customer:bdb22dedd38b1a357bf7fe74d373c614775aa92f
         env:
         - name: QUARKUS_PROFILE
           value: aws-dev
