--- a/overlays/aws/local-dev/customer-localstack.yaml
+++ b/overlays/aws/local-dev/customer-localstack.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: customer-localstack
-  namespace: nautible-app
+  namespace: nautible-app-ms
   labels:
     app.kubernetes.io/name: customer-localstack
     app.kubernetes.io/instance: customer-localstack
@@ -60,7 +60,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: customer-localstack
-  namespace: nautible-app
+  namespace: nautible-app-ms
   labels:
     app.kubernetes.io/name: customer-localstack
     app.kubernetes.io/instance: customer-localstack
