--- a/overlays/azure/dev/istio-network.yaml
+++ b/overlays/azure/dev/istio-network.yaml
@@ -1,11 +1,11 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: nautible-app-customer-gateway
-  namespace: nautible-app
+  name: nautible-app-ms-customer-gateway
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-customer-gateway
-    app.kubernetes.io/instance: nautible-app-customer-gateway
+    app.kubernetes.io/name: nautible-app-ms-customer-gateway
+    app.kubernetes.io/instance: nautible-app-ms-customer-gateway
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: gateway
     app.kubernetes.io/part-of: nautible
@@ -24,11 +24,11 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: VirtualService
 metadata:
-  name: nautible-app-customer-vs
-  namespace: nautible-app
+  name: nautible-app-ms-customer-vs
+  namespace: nautible-app-ms
   labels:
-    app.kubernetes.io/name: nautible-app-customer-vs
-    app.kubernetes.io/instance: nautible-app-customer-vs
+    app.kubernetes.io/name: nautible-app-ms-customer-vs
+    app.kubernetes.io/instance: nautible-app-ms-customer-vs
     app.kubernetes.io/version: 1.0.0
     app.kubernetes.io/component: virtualservice
     app.kubernetes.io/part-of: nautible
@@ -37,15 +37,15 @@ spec:
   hosts:
   - "*"
   gateways:
-  - nautible-app-customer-gateway
+  - nautible-app-ms-customer-gateway
   http:
   - match:
     - uri:
-        prefix: /api/v1.0/nautible-app/customer
+        prefix: /api/v1.0/nautible-app-ms/customer
     rewrite:
       uri: "/customer"
     route:
     - destination:
-        host: nautible-app-customer
+        host: nautible-app-ms-customer
         port:
           number: 8080
