--- a/overlays/azure/local-dev/customer-deploy.yaml
+++ b/overlays/azure/local-dev/customer-deploy.yaml
@@ -2,15 +2,15 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nautible-app-customer
-  namespace: nautible-app
+  name: nautible-app-ms-customer
+  namespace: nautible-app-ms
 spec:
   replicas: 1
   template:
     spec:
       containers:
-      - name: nautible-app-customer
-        image: nautibledevacr.azurecr.io/nautible-app-customer:latest
+      - name: nautible-app-ms-customer
+        image: nautibledevacr.azurecr.io/nautible-app-ms-customer:latest
         env:
         - name: QUARKUS_PROFILE
           value: azure-local-dev
