--- a/overlays/azure/local-dev/customer-mongo.yaml
+++ b/overlays/azure/local-dev/customer-mongo.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: customer-mongodb
-  namespace: nautible-app
+  namespace: nautible-app-ms
   labels:
     app.kubernetes.io/name: customer-mongodb
     app.kubernetes.io/instance: customer-mongodb
@@ -63,7 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: customer-mongodb
-  namespace: nautible-app
+  namespace: nautible-app-ms
   labels:
     app.kubernetes.io/name: customer-mongodb
     app.kubernetes.io/instance: customer-mongodb
