--- a/overlays/aws/local-dev/dependencies/customer-localstack.yaml
+++ b/overlays/aws/local-dev/dependencies/customer-localstack.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: customer-localstack
-        image: localstack/localstack
+        image: localstack/localstack:0.14.4
         ports:
           - containerPort: 4566
         env:
@@ -51,7 +51,6 @@ spec:
                    && echo \"[localstack]\" >> ~/.aws/credentials \
                    && echo \"aws_access_key_id = test-key\" >> ~/.aws/credentials \
                    && echo \"aws_secret_access_key = test-secret\" >> ~/.aws/credentials \
-                   && for i in `seq 1 60`; do wget -Y off --no-check-certificate -O - -q http://localhost:4566/health >/dev/null && break || true; sleep 5; done \
                    && aws dynamodb create-table --table-name Customer --attribute-definitions AttributeName=Id,AttributeType=N --key-schema AttributeName=Id,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                    && aws dynamodb create-table --table-name Sequence --attribute-definitions AttributeName=Name,AttributeType=S --key-schema AttributeName=Name,KeyType=HASH --provisioned-throughput ReadCapacityUnits=1,WriteCapacityUnits=1 --profile localstack --endpoint-url=http://localhost:4566 \
                    && aws dynamodb put-item --table-name=Sequence --item '{\"Name\": {\"S\": \"Customer\"}, \"SequenceNumber\": {\"N\": \"0\"}}' --profile localstack --endpoint-url=http://localhost:4566"
