--- a/overlays/azure/local-dev/dependencies/customer-mongo.yaml
+++ b/overlays/azure/local-dev/dependencies/customer-mongo.yaml
@@ -43,10 +43,10 @@ spec:
               command:
                 - sh
                 - -c
-                - "for i in `seq 1 60`; do mongo mongodb://root:password@localhost:27017/?authSource=admin --quiet && break || true; sleep 5; done \
-                   && mongo mongodb://root:password@localhost:27017/?authSource=admin --eval 'db.getSiblingDB(\"Common\").createCollection(\"Sequence\");' \
-                   && mongo mongodb://root:password@localhost:27017/?authSource=admin --eval 'db.getSiblingDB(\"Customer\").createCollection(\"Customer\");' \
-                   && mongo mongodb://root:password@localhost:27017/Common?authSource=admin --eval 'db.Sequence.insertOne( { _id: \"Customer\", SequenceNumber: NumberInt(0) } );'"
+                - "for i in `seq 1 60`; do mongostat mongodb://root:password@localhost:27017/?authSource=admin -n 1 && break || true; sleep 5; done \
+                   && mongosh mongodb://root:password@localhost:27017/Common?authSource=admin --eval 'db.getSiblingDB(\"Common\").createCollection(\"Sequence\");' \
+                   && mongosh mongodb://root:password@localhost:27017/Customer?authSource=admin --eval 'db.getSiblingDB(\"Customer\").createCollection(\"Customer\");' \
+                   && mongosh mongodb://root:password@localhost:27017/Common?authSource=admin --eval 'db.Sequence.insertOne( { _id: \"Customer\", SequenceNumber: NumberInt(0) } );'"
       - name: customer-mongodb-express
         image: mongo-express
         ports:
