Revert "nautible/issues#64 - quarkus vup"
This reverts commit 7129220343902b580f274161725da3dc93e2893a.

--- a/base/customer-deploy.yaml
+++ b/base/customer-deploy.yaml
@@ -36,13 +36,13 @@ spec:
         livenessProbe:
           httpGet:
             port: 8080
-            path: /q/health/live
+            path: /health/live
           failureThreshold: 10
           periodSeconds: 30
         readinessProbe:
           httpGet:
             port: 8080
-            path: /q/health/ready
+            path: /health/ready
           failureThreshold: 10
           periodSeconds: 30
 
