--- a/overlays/azure/local-dev/dependencies/customer-mongo.yaml
+++ b/overlays/azure/local-dev/dependencies/customer-mongo.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       containers:
       - name: customer-mongodb
-        image: mongo:4
+        image: mongo
         ports:
           - containerPort: 27017
         env:
