--- a/overlays/aws/dev/customer-deploy.yaml
+++ b/overlays/aws/dev/customer-deploy.yaml
@@ -8,10 +8,10 @@ spec:
   template:
     spec:
       containers:
-      - name: nautible-app-ms-customer
-        image: public.ecr.aws/nautible/nautible-app-ms-customer:7eaad379c517e35464c8358bdcb9182d3d4b36aa
-        env:
-        - name: QUARKUS_PROFILE
-          value: aws-dev
-        - name: QUARKUS_DYNAMODB_AWS_REGION
-          value: ap-northeast-1
+        - name: nautible-app-ms-customer
+          image: public.ecr.aws/nautible/nautible-app-ms-customer:latest
+          env:
+            - name: QUARKUS_PROFILE
+              value: aws-dev
+            - name: QUARKUS_DYNAMODB_AWS_REGION
+              value: ap-northeast-1
